# RoughSketchSimplification

./: Assumptions.txt  CMakeLists.txt  Instructions.txt  Multi.cpp  README.md
